<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailVerification"
    android:background="@drawable/signup_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/A2Toptxt"
        android:textColor="@color/picton_blue"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/verifyBtn"
        android:layout_width="156dp"
        android:layout_height="52dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="312dp"
        android:background="@drawable/button3"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/VerifyBtn"
        android:textColor="@color/solitude"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="114dp"
        android:layout_height="49dp"
        android:layout_marginBottom="312dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/A2Bottxt"
        android:textAlignment="center"
        android:textColor="@color/picton_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/verifyBtn"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:elevation="6dp"
        android:ems="10"
        android:hint="@string/codeHint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />
</androidx.constraintlayout.widget.ConstraintLayout>