<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_background"
    tools:context=".SignUp">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="161dp"
        android:layout_height="51dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/toptxt"
        android:textAlignment="center"
        android:textColor="@color/picton_blue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:background="@drawable/edit_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/usernameHint"
        android:padding="10dp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:elevation="6dp"
        android:autofillHints="Username"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:textColor="@color/picton_blue"
        android:hint="@string/passwordHint"
        android:elevation="6dp"
        android:padding="10dp"
        android:background="@drawable/edit_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="199dp"
        android:layout_height="60dp"
        android:background="@drawable/button3"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/btntxt"
        android:textColor="@color/solitude"
        android:textSize="24sp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />
</androidx.constraintlayout.widget.ConstraintLayout>