<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcomePage"


    >

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="246dp"
        android:layout_height="245dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        app:srcCompat="@drawable/img2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/unminput"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_edittxt1"
        android:ems="10"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/un"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <EditText
        android:id="@+id/pwdminput"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_edittxt1"
        android:ems="10"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <Button
        android:id="@+id/btnm2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_button1"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/log_in"
        android:textColor="#fff"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/txtfpwm"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:clickable="true"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/fpwd"
        android:textColor="@color/dark"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"

        />

    <Button
        android:id="@+id/btnm1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_button1"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/sign_up"
        android:textColor="#fff"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>