<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaperExamView"
    android:orientation="vertical"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:id="@+id/paperHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="224dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lite"
            android:orientation="vertical">

            <TextView
                android:id="@+id/paperID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_semibold"
                android:paddingTop="10dp"
                android:text="@string/paper_1"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/paperDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/des"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="22sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/timeView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lite"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/string"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tm"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/dark" />

                    <TextView
                        android:id="@+id/countdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="00:00:00"
                        android:textAlignment="viewStart"
                        android:textColor="@color/dark" />

                    <Button
                        android:id="@+id/submitbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_button1"
                        android:fontFamily="@font/raleway_semibold"
                        android:text="@string/submit"
                        android:textColor="#FFFFFF" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/mcqviewline">

        </LinearLayout>
    </ScrollView>


</LinearLayout>